--- a/src/containers/Login/Login.css
+++ b/src/containers/Login/Login.css
@@ -15,7 +15,7 @@
   align-items: center;
 }
 
-.form-container {
+.login-form-container {
   grid-column: 6 / 10;
   text-align: center;
   display: grid;
@@ -23,11 +23,11 @@
   grid-row-gap: 20px;
 }
 
-.logo-container {
+.login-logo-container {
   grid-row: 1 / 3;
 }
 
-.logo-container img {
+.login-logo-container img {
   width: 250px;
 }
 
@@ -49,14 +49,14 @@
   }
 
 .login-form input[type="text"]{
-    background-image: url("../../assets/username.svg");
+    background-image: url("../../assets/ico-username.png");
     background-size:  16px;
     background-repeat: no-repeat;
     background-position: 20px center;
 }
 
 .login-form input[type="password"]{
-    background-image: url("../../assets/password.svg");
+    background-image: url("../../assets/ico-lock.png");
     background-size:  16px;
     background-repeat: no-repeat;
     background-position: 20px center;
