--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -15,13 +15,15 @@
     border: none;
     background: none;
     cursor: pointer;
+    width: 90px;
+    display:flex;
+    justify-content: space-around;
+    align-items: center;
 }
 
 .header button svg{
     fill:#2f3254;
 }
-
-
 
 .header button:hover{
     color:#99cc33;
