--- a/src/containers/Login/Login.css
+++ b/src/containers/Login/Login.css
@@ -1,4 +1,7 @@
 .login-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   background-image: linear-gradient(
       to right,
       rgba(11, 15, 39, 0.8),
@@ -10,58 +13,51 @@
   background-position: left center;
   height: 100vh;
   width: 100%;
-  display: grid;
-  grid-template-columns: 1fr repeat(12, minmax(max-content, 90px)) 1fr;
-  align-items: center;
 }
 
 .login-form-container {
-  grid-column: 6 / 10;
   text-align: center;
-  display: grid;
-  grid-template-rows: repeat(5, 55px);
-  grid-row-gap: 20px;
+  display: flex;
+  flex-direction: column;
 }
 
 .login-logo-container {
-  grid-row: 1 / 3;
+  margin-bottom: 75px;
 }
 
-.login-logo-container img {
+.login-logo-container img{
   width: 250px;
 }
 
 .login-form {
-  display: grid;
-  grid-template-rows: repeat(3, 55px);
-  grid-row-gap: 20px;
+  display: flex;
+  flex-direction: column;
+  width: 300px;
+}
+
+.login-form input[type="text"] {
+  background-image: url("../../assets/ico-username.png");
+}
+
+.login-form input[type="password"] {
+  background-image: url("../../assets/ico-lock.png");
 }
 
 .login-form input {
+  height: 55px;
+  margin-bottom: 20px;
   border: none;
   border-radius: 5px;
   padding-left: 55px;
   font-size: 16px;
+  background-size: 16px;
+  background-repeat: no-repeat;
+  background-position: 20px center;
 }
 
 .login-form input::placeholder {
-   color: #ccc;
-  }
-
-.login-form input[type="text"]{
-    background-image: url("../../assets/ico-username.png");
-    background-size:  16px;
-    background-repeat: no-repeat;
-    background-position: 20px center;
+  color: #ccc;
 }
-
-.login-form input[type="password"]{
-    background-image: url("../../assets/ico-lock.png");
-    background-size:  16px;
-    background-repeat: no-repeat;
-    background-position: 20px center;
-}
-
 
 .login-form input:focus {
   color: #999;
@@ -69,6 +65,7 @@
 }
 
 .login-form button {
+  height: 55px;
   background: #9fd533;
   border: none;
   border-radius: 5px;
@@ -80,4 +77,41 @@
 .login-form button:hover {
   background: #86b300;
   cursor: pointer;
+}
+
+@supports (display: grid) {
+  .login-container {
+    min-height: 100vh;
+    display: grid;
+    grid-template-columns: 1fr repeat(12, minmax(max-content, 90px)) 1fr;
+    align-items: center;
+  }
+
+  .login-form-container {
+    grid-column: 6 / 10;
+    display: grid;
+    grid-template-rows: repeat(5, 55px);
+    grid-row-gap: 20px;
+  }
+
+  .login-logo-container {
+    grid-row: 1 / 3;
+    margin-bottom: 0;
+  }
+
+  .login-form {
+    display: grid;
+    grid-template-rows: repeat(3, 55px);
+    grid-row-gap: 20px;
+    width: auto;
+  }
+
+  .login-form input {
+    height: auto;
+    margin-bottom: 0;
+  }
+
+  .login-form button {
+    height: auto;
+  }
 }
