--- a/src/containers/Servers/index.css
+++ b/src/containers/Servers/index.css
@@ -16,6 +16,10 @@
   border-bottom: 1px solid #e5e5e5;
 }
 
+.servers-list-header p {
+  text-transform: uppercase;
+}
+
 .servers-list {
   height: calc(100vh - 170px);
   overflow-y: auto;
