--- a/src/components/Server/index.css
+++ b/src/components/Server/index.css
@@ -1,9 +1,12 @@
-.server-container {
-  color: #666666;
+.server {
   display: flex;
   height: 55px;
   justify-content: space-between;
   align-items: center;
   padding: 0 15px;
   border-bottom: 1px solid #e5e5e5;
+}
+
+.server__paragraph{
+  color: #666666;
 }
