--- a/src/components/Spinner/index.css
+++ b/src/components/Spinner/index.css
@@ -17,22 +17,22 @@
   animation: sk-stretchdelay 1.2s infinite ease-in-out;
 }
 
-.spinner .rect2 {
+.spinner__rect2 {
   -webkit-animation-delay: -1.1s;
   animation-delay: -1.1s;
 }
 
-.spinner .rect3 {
+.spinner__rect3 {
   -webkit-animation-delay: -1s;
   animation-delay: -1s;
 }
 
-.spinner .rect4 {
+.spinner__rect4 {
   -webkit-animation-delay: -0.9s;
   animation-delay: -0.9s;
 }
 
-.spinner .rect5 {
+.spinner__rect5 {
   -webkit-animation-delay: -0.8s;
   animation-delay: -0.8s;
 }
