--- a/src/containers/Servers/index.css
+++ b/src/containers/Servers/index.css
@@ -1,10 +1,10 @@
-.servers-container {
+.servers {
   width: 100%;
   height: 100vh;
   overflow: hidden;
 }
 
-.servers-list-header {
+.servers__header {
   height: 55px;
   display: flex;
   padding: 0px 15px;
@@ -16,11 +16,11 @@
   border-bottom: 1px solid #e5e5e5;
 }
 
-.servers-list-header p {
+.servers__header__paragraph {
   text-transform: uppercase;
 }
 
-.servers-list {
+.servers__list {
   height: calc(100vh - 170px);
   overflow-y: auto;
 }
