--- a/src/components/Spinner/index.css
+++ b/src/components/Spinner/index.css
@@ -6,7 +6,7 @@
   font-size: 10px;
 }
 
-.spinner > div {
+.spinner__rect {
   background-color: white;
   height: 100%;
   width: 3px;
@@ -17,22 +17,22 @@
   animation: sk-stretchdelay 1.2s infinite ease-in-out;
 }
 
-.spinner__rect2 {
+.spinner__rect--2 {
   -webkit-animation-delay: -1.1s;
   animation-delay: -1.1s;
 }
 
-.spinner__rect3 {
+.spinner__rect--3 {
   -webkit-animation-delay: -1s;
   animation-delay: -1s;
 }
 
-.spinner__rect4 {
+.spinner__rect--4 {
   -webkit-animation-delay: -0.9s;
   animation-delay: -0.9s;
 }
 
-.spinner__rect5 {
+.spinner__rect--5 {
   -webkit-animation-delay: -0.8s;
   animation-delay: -0.8s;
 }
