--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,25 +1,27 @@
 $color_logout: #2f3254;
+$centrify: (display: flex, justify-content: space-between, align-items: center);
 
+@mixin center_items($display, $justify-content, $align-items){
+  display: $display;
+  justify-content: $justify-content;
+  align-items: $align-items;
+}
 
 .header-style {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 0 1em;
+  @include center_items($centrify...);
   height: 100px;
+  padding: 0 1em;
 }
 
 .logout-btn {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+  @include center_items($centrify...);
+  min-width: 60px;
   font-size: 13px;
   color: $color_logout;
-  min-width: 60px;
 }
 
 .logo-style {
-    width: 110px;
+  width: 110px;
 }
 
 .logout-ico-style {
