--- a/src/components/ServerList/ServerList.scss
+++ b/src/components/ServerList/ServerList.scss
@@ -5,23 +5,22 @@ $color_mid_grey: #999999;
 $color_border_grey: #e6e6e6;
 $color_servers_grey: #666666;
 
-div.server-container {
-	width:100%;
+.main-container {
   height: calc(100vh - 100px);
+	width:100%;
 	overflow: hidden;
 }
 
 .list-style {
-	list-style-type: none;
-	padding: 0;
-	margin-top: 0;
-	margin-right: 0px;
-	overflow-y: auto;
 	height: calc(100vh - 155px);
+	overflow-y: auto;
+	padding: 0;
+	margin: 0;
+	list-style-type: none;
 }
 
 .list-style::-webkit-scrollbar {
-    width: 6px;
+  width: 6px;
 }
 
 .list-style::-webkit-scrollbar-thumb {
@@ -30,12 +29,17 @@ div.server-container {
 }
 
 div.cols-title {
+  padding: 0 1em;
 	background-color: $color_light_grey;
 	color: $color_mid_grey;
   text-transform: uppercase;
   font-size: 14px;
   letter-spacing: 1px;
-  padding: 0 1em;
+}
+
+.server-box, a {
+	color: $color_servers_grey;
+	text-decoration: none;
 }
 
 .server-box {
@@ -47,14 +51,8 @@ div.cols-title {
   border-top: $color_border_grey 1px solid;
 	border-bottom: $color_border_grey 1px solid;
   font-size: 15px;
-  color: $color_servers_grey;
-}
 
-.server-box:hover {
-  background-color: $color_light_grey;
-}
-
-a {
-  color: $color_servers_grey;
-  text-decoration: none;
+	&:hover {
+	  background-color: $color_light_grey;
+	}
 }
