--- a/src/containers/Signin/Signin.scss
+++ b/src/containers/Signin/Signin.scss
@@ -9,8 +9,22 @@ $color_button_hover: #86b300;
 
 //urls
 $url_background: url("../../assets/dude_in_wave.png");
-$url_user_ico: url("../../assets/ico-username.png");
-$url_pass_ico: url("../../assets/ico-lock.png");
+
+img.bg {
+  /* Set rules to fill background */
+  min-height: calc(100vh + 200px);
+  min-width: calc(100vw + 100px);
+
+  /* Set up proportionate scaling */
+  width: 100vw;
+  height: auto;
+
+  /* Set up positioning */
+  position: fixed;
+  top: -200px;
+  left: -100px;
+	z-index: -99;
+}
 
 div.signin-container {
 	height: 100vh;
@@ -18,13 +32,7 @@ div.signin-container {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	background: linear-gradient(
-    to bottom,
-    $color_grey_bg,
-    $color_grey_bg ), $url_background;
-	background-repeat: no-repeat;
-	background-size: cover;
-	background-position: left center;
+	background: $color_grey_bg;
 }
 
 .centrify-logo {
@@ -56,9 +64,12 @@ div.signin-container {
 	&:focus {
 		background-color: $color_input_text_focus;
 	}
-}
-.input-form::placeholder {
-	color: $color_input_text_ph;
+	&::placeholder{
+		color: $color_input_text_ph;
+	}
+	&::placeholder:focus{
+		color: #ccc;
+	}
 }
 
 .login-btn {
@@ -72,18 +83,8 @@ div.signin-container {
 	}
 }
 
-#ico-user {
+.input-ico {
 	position: absolute;
-	background: $url_user_ico left top;
-	background-size: 14px;
-	width: 14px;
-	height: 16px;
-	margin: 21px 24px;
-}
-#ico-pass {
-	position: absolute;
-	background: $url_pass_ico left top;
-	background-size: 14px;
 	width: 14px;
 	height: 16px;
 	margin: 21px 24px;
