--- a/src/app/components/ErrorMsg/Error.scss
+++ b/src/app/components/ErrorMsg/Error.scss
@@ -1,6 +1,22 @@
 $error_color: #ab2e2e;
 $error_color_text: #f9f9f9;
 
+@mixin errorAnimation($time){
+  -webkit-animation: fade-in $time ease-in forwards;
+  -moz-animation: fade-in $time ease-in forwards;
+  -ms-animation: fade-in $time ease-in forwards;
+  -o-animation: fade-in $time ease-in forwards;
+  animation: fade-in $time ease-in forwards;
+}
+
+@mixin errorAnimationTransformation(){
+  0% {top: -30px; opacity: 0.1;}
+  15% {top: -20px; opacity: 0.2;}
+  30% {top: -10px; opacity: 0.4;}
+  50% {top: 0; opacity: 0.6;}
+	100% { top: 0px; opacity: 1;}
+}
+
 .error-exit {
   position: absolute;
   top: .8em;
@@ -16,6 +32,7 @@ $error_color_text: #f9f9f9;
   position: absolute;
   width: 100%;
   top: 0;
+  left: 0;
   padding: .8em 0 .5em;
 
   display: flex;
@@ -25,40 +42,25 @@ $error_color_text: #f9f9f9;
   color: $error_color_text;
   background: $error_color;
 
-  -webkit-animation: show-in .3s ease-in forwards;
-	-moz-animation: show-in .3s ease-in forwards;
-	-o-animation: show-in .3s ease-in forwards;
-	animation: show-in .3s ease-in forwards;
+  @include errorAnimation(.3s);
 }
 
-@keyframes show-in {
-  0% {top: -30px; opacity: 0.1;}
-  15% {top: -20px; opacity: 0.2;}
-  30% {top: -10px; opacity: 0.4;}
-  50% {top: 0; opacity: 0.6;}
-	100% { top: 0px; opacity: 1;}
+@keyframes fade-in {
+  @include errorAnimationTransformation();
 }
 
-@-webkit-keyframes show-in {
-  0% {top: -30px; opacity: 0.1;}
-  15% {top: -20px; opacity: 0.2;}
-  30% {top: -10px; opacity: 0.4;}
-  50% {top: 0; opacity: 0.6;}
-	100% { top: 0px; opacity: 1;}
+@-webkit-keyframes fade-in {
+  @include errorAnimationTransformation();
 }
 
-@-moz-keyframes show-in {
-  0% {top: -30px; opacity: 0.1;}
-  15% {top: -20px; opacity: 0.2;}
-  30% {top: -10px; opacity: 0.4;}
-  50% {top: 0; opacity: 0.6;}
-	100% { top: 0px; opacity: 1;}
+@-moz-keyframes fade-in {
+  @include errorAnimationTransformation();
 }
 
-@-o-keyframes show-in {
-  0% {top: -30px; opacity: 0.1;}
-  15% {top: -20px; opacity: 0.2;}
-  30% {top: -10px; opacity: 0.4;}
-  50% {top: 0; opacity: 0.6;}
-	100% { top: 0px; opacity: 1;}
+@-ms-keyframes fade-in {
+  @include errorAnimationTransformation();
+}
+
+@-o-keyframes fade-in {
+  @include errorAnimationTransformation();
 }
